<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HSR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">APP运行前请开启数据连接和GPS (5.2.1223)</string>
    <string name="deviceinfo"> 电信 1-HTC 609d; 2-SCH-I959;\n联通 3-M351; 4-I9500; 5-Butterfly;\n移动 6-N9008V; 7-HTC D820u; 8-N9008S</string>
    <string name="checkBox">in lab</string>
    <string name="measurementSetting">min  Size:</string>
    <string name="measurementTypePrompt">Measurement Type</string>
    <string name="contentDescription">Splash Screen Picture</string>
    <string name="button_start">开始</string>
    <string name="button_end">结束当前测试</string>
    <string name="editText_serverIPString">ServerIP:</string>
    <string name="editText_measureTimeString">Duration:</string>
    <!-- 宿舍服务器 <string name="server_IP">59.66.122.80</string> -->
    <!-- 联通服务器 <string name="server_IP">115.28.220.19</string> -->
    <!-- 电信服务器 <string name="server_IP">115.28.149.21</string> -->
    <!-- 移动服务器 <string name="server_IP">115.28.162.143</string> -->
    <string name="server_IP">115.28.220.19</string>
    <string name="server_time">1</string>
    <string name="server_interval">5</string>
    <string name="directionString">数据连接:</string>
    <string name="typeString">网络类型:</string>
    <string name="signalString">信号强度:</string>
    <string name="signalParameterString">信号参数:</string>
    <string name="basestationString">当前基站:</string>
    <string name="cellidString">相邻基站:</string>
    <string name="handoffString">网络选择:</string>
    <string name="satelliteString">卫星数目:</string>
    <string name="speedString">运动速度:</string>
    <string name="gpsString">GPS信息:</string>
    <string name="locationString">当前位置:</string>
    <string name="wifiString">WiFi信息:</string>
    <string name="pingString">网络时延:</string>
    <string name="netString">当前网速:</string>
    <string name="timeString">系统时间:</string>
    <string name="serverString">测试状态:</string>

</resources>