<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/hello_world" />

    <Spinner
        android:id="@+id/measurementTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/textView_hello"
        android:layout_marginTop="5dp"
        android:prompt="@string/measurementTypePrompt" />

    <Button
        android:id="@+id/button_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/measurementTypeSpinner"
        android:layout_alignBottom="@+id/measurementTypeSpinner"
        android:layout_alignLeft="@+id/measurementTypeSpinner"
        android:layout_marginLeft="190dp"
        android:text="@string/button_start" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <requestFocus />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_serverIPString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_Start"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:ems="4"
        android:focusable="false"
        android:inputType="text"
        android:text="@string/editText_serverIPString" />

    <EditText
        android:id="@+id/editText_serverIP"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_Start"
        android:layout_toRightOf="@+id/editText_serverIPString"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:text="@string/server_IP" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_serverIP" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/typeString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="20dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/typeString" />

            <TextView
                android:id="@+id/typeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/typeString" />

            <TextView
                android:id="@+id/directionString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/typeText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/directionString" />

            <TextView
                android:id="@+id/directionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/typeText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/directionString" />

            <TextView
                android:id="@+id/signalString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/directionText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/signalString" />

            <TextView
                android:id="@+id/signalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/directionText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/signalString" />

            <TextView
                android:id="@+id/basestationString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/signalText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/basestationString" />

            <TextView
                android:id="@+id/basestationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signalText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/basestationString" />

            <TextView
                android:id="@+id/cellidString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/basestationText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/cellidString" />

            <TextView
                android:id="@+id/cellidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/basestationText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/cellidString" />

            <TextView
                android:id="@+id/handoffString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/cellidText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/handoffString" />

            <TextView
                android:id="@+id/handoffText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cellidText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/handoffString" />

            <TextView
                android:id="@+id/gpsString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/handoffText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/gpsString" />

            <TextView
                android:id="@+id/gpsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/handoffText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/gpsString" />

            <TextView
                android:id="@+id/locationString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/gpsText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/locationString" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gpsText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/locationString" />

            <TextView
                android:id="@+id/speedString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/locationText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/speedString" />

            <TextView
                android:id="@+id/speedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locationText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/speedString" />

            <TextView
                android:id="@+id/wifiString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/speedText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/wifiString" />

            <TextView
                android:id="@+id/wifiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/speedText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/wifiString" />

            <TextView
                android:id="@+id/serverString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/wifiText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/serverString" />

            <TextView
                android:id="@+id/serverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wifiText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/serverString" />

            <TextView
                android:id="@+id/netString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/serverText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/netString" />

            <TextView
                android:id="@+id/netText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/serverText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/netString" />

            <TextView
                android:id="@+id/pingString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/netText"
                android:layout_marginTop="6dp"
                android:ems="4"
                android:gravity="right"
                android:text="@string/pingString" />

            <TextView
                android:id="@+id/pingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/netText"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/pingString" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>